Fix spacing on top

--- a/shopsafe-frontend/src/app/components/landing/landing.component.css
+++ b/shopsafe-frontend/src/app/components/landing/landing.component.css
@@ -1,5 +1,5 @@
 #landing .heading-text {
-    padding-top: 25%;
+    padding-top: 100px;
     text-align: center;
 }
 
