--- a/shopsafe-frontend/src/styles.css
+++ b/shopsafe-frontend/src/styles.css
@@ -105,5 +105,5 @@ a:hover {
 }
 
 .grey-text {
-  color: rgba(0, 0, 0, 0.1);
+  color: #707070;
 }
